--- a/moodle/index.html
+++ b/moodle/index.html
@@ -86,10 +86,10 @@
     <h4>Apariencia</h4>
     <ul>
       <li>Instala y personaliza un <a href="https://moodle.org/plugins/browse.php?list=category&id=3">tema</a></li>
+      <li>Personaliza la FrontPage</li>
     </ul>
 
     <h4>Cursos y categorías</h4>
-
     <ul>
       <li>Crea un curso de forma manual</li>
       <li>Crea cursos usando la opción "Upload courses"</li>
@@ -107,21 +107,47 @@
       </li>
     </ul>
 
+    <h4>Actividades</h4>
+    <ul>
+      <li>En un curso, crea 3 actividades:
+        <ul>
+          <li>Entrega</li>
+          <li>Cuestionario</li>
+          <li>H5P</li>
+        </ul>
+      </li>
+    </ul>
 
-    <h4>Usuarios y grupos</h4>
+
+    <h4>Usuarios, cohortes y roles</h4>
     <ul>
       <li>Crea un usuario de forma manual</li>
       <li>Crea usuarios usando la opción "Upload users"</li>
       <li>Permite que los usuarios puedan registrarse mediante la opción "Email-based self-registration". 
         Para ello deberás configurar el SMTP (<a href="https://docs.moodle.org/310/en/Email_setup_gmail">Email setup gmail</a>)
       </li>
-    </ul>
-  </li>
-
-  <h4>Roles</h4>
-  <ul>
     <li>Asigna el rol profesor a un usuario un curso</li>
     <li>Define un rol personalizado y justifícalo</li>
+    <li>Matricula usuarios en un curso</li>
+    <li>Permite en un curso la automatriculación de alumnos con contraseña</li>
+    <li>Permite el acceso de invitado a un curso</li>
+    <li>Crea una cohorte (grupo) y añade usuarios. Matricula la cohorte a un curso.</li>
   </ul>
 
+  <h4>Seguridad</h4>
+  <ul>
+    <li>Incrementa el tamaño de subida de ficheros máximo. (Crea una Tarea de subida de ficheros en un curso y comprueba que funciona)</li>
+    <li>Programa copias de seguridad de cursos automática. Restaura copias de seguridad.</li>
+  </ul>
+
+  <h4>Plugins</h4>
+  <p>Instala, configura y utiliza los siguientes plugins:</p>
+  <ul>
+    <li><a href="https://moodle.org/plugins/local_intelliboard">IntelliBoard</a></li>
+    <li><a href="https://moodle.org/plugins/mod_hsuforum">Open Forum</a></li>
+    <li><a href="https://moodle.org/plugins/mod_icontent">Content Pages</a></li>
+    <li><a href="https://moodle.org/plugins/block_gchat">Global chat</a></li>
+  </ul>
+
+  <h4>WebServices</h4>
 </section>
