--- a/moodle/index.html
+++ b/moodle/index.html
@@ -91,9 +91,9 @@
 
     <h4>Cursos y categorías</h4>
     <ul>
-      <li>Crea un curso de forma manual</li>
-      <li>Crea cursos usando la opción "Upload courses"</li>
-      <li>Organiza los cursos en las siguientes categorías:
+      <li><p>Crea un curso de forma manual</p></li>
+      <li><p>Crea cursos usando la opción "Upload courses"</p></li>
+      <li><p>Organiza los cursos en las siguientes categorías:</p>
         <sc none>
           - Administració i gestió
               - CFGM Gestió administrativa
@@ -108,15 +108,13 @@
     </ul>
 
     <h4>Actividades</h4>
+    <p>En un curso, crea 3 actividades:</p>
     <ul>
-      <li>En un curso, crea 3 actividades:
-        <ul>
-          <li>Entrega</li>
-          <li>Cuestionario</li>
-          <li>H5P</li>
-        </ul>
-      </li>
+      <li>Entrega</li>
+      <li>Cuestionario</li>
+      <li>H5P</li>
     </ul>
+
 
 
     <h4>Usuarios, cohortes y roles</h4>
