--- a/htmllayout/index.html
+++ b/htmllayout/index.html
@@ -44,9 +44,9 @@
             img {width: 60px}
         &lt;/style&gt;
         
-        &lt;p&gt;🤖&lt;/p&gt;
-        &lt;p&gt;RobotWeb&lt;/p&gt;
-        &lt;p&gt;🔎&lt;/p&gt;
+        &lt;span&gt;🤖&lt;/span&gt;
+        &lt;span&gt;RobotWeb&lt;/span&gt;
+        &lt;span&gt;🔎&lt;/span&gt;
         
         &lt;img src=&quot;1.webp&quot;&gt;
         &lt;img src=&quot;2.webp&quot;&gt;
