--- a/firebase/index.html
+++ b/firebase/index.html
@@ -197,6 +197,10 @@
     </sc>
 
     <p><b>Ejecuta la app y autentícate con una cuenta de Google. Luego comprueba que en la <a href="https://console.firebase.google.com">Consola Firebase del Proyecto</a> aparece el usuario que se ha autenticado:</b></p>
+    <info>
+      <p>Para ejecutar la aplicación tendras que volver a seleccionar <w>app</w> en el selector de configuraciones:</p>
+      <img style="width: 340px" src="img/firebase21.png">
+    </info>
     <img src="img/firebase14.png">
   </section>
 
