--- a/moodle/index.html
+++ b/moodle/index.html
@@ -123,6 +123,7 @@
       <li>Crea usuarios usando la opción "Upload users"</li>
       <li>Permite que los usuarios puedan registrarse mediante la opción "Email-based self-registration". 
         Para ello deberás configurar el SMTP (<a href="https://docs.moodle.org/310/en/Email_setup_gmail">Email setup gmail</a>)
+        <img src="img/moodle_smtp.png">
       </li>
     <li>Asigna el rol profesor a un usuario un curso</li>
     <li>Define un rol personalizado y justifícalo</li>
