--- a/firebase/index.html
+++ b/firebase/index.html
@@ -196,6 +196,13 @@
       }
     </sc>
 
+    <warn>
+      <p>El recurso <w>R.string.default_web_client_id</w> aparecerá en rojo debido a que no existe. 
+      No te preocupes, Gradle lo generará automáticamente cuando compile la app.
+      </p>
+    </warn>
+
+
     <p><b>Ejecuta la app y autentícate con una cuenta de Google. Luego comprueba que en la <a href="https://console.firebase.google.com">Consola Firebase del Proyecto</a> aparece el usuario que se ha autenticado:</b></p>
     <info>
       <p>Para ejecutar la aplicación tendras que volver a seleccionar <w>app</w> en el selector de configuraciones:</p>
