--- a/javatutorial/index.html
+++ b/javatutorial/index.html
@@ -18,6 +18,7 @@
             <li><a href="6">Sentències de repetició</a></li>
             <li><a href="7">Sentències de ramificació</a></li>
             <li><a href="8">Arrays</a></li>
+            <li><a href="9">Classes i objectes</a></li>
         </ul>
         <p><a href="https://hackerrank.com/dam-m3">Exercicis</a></p>
     </abstract>
