--- a/javatutorial/index.html
+++ b/javatutorial/index.html
@@ -19,6 +19,7 @@
             <li><a href="7">Sentències de ramificació</a></li>
             <li><a href="8">Arrays</a></li>
             <li><a href="9">Classes i objectes</a></li>
+            <li><a href="10">Mètodes</a></li>
         </ul>
         <p><a href="https://hackerrank.com/dam-m3">Exercicis</a></p>
     </abstract>
