--- a/daw-m8/index.html
+++ b/daw-m8/index.html
@@ -101,28 +101,28 @@ a {
 }
 
 
-.card.java{
-    border-color: var(--java-color);
+.card.web{
+    border-color: var(--web-color);
 }
 
-.card.java .icon{
-    background-image: var(--java-icon);
+.card.web .icon{
+    background-image: var(--web-icon);
 }
 
-.card.java .button{
-    background-color: var(--java-color);
+.card.web .button{
+    background-color: var(--web-color);
 }
 </style>
 
 <div class="title">
-    <span>DAM - M6 - Accés a dades</span>
+    <span>DAW - M8 - Desplegament d&#39;aplicacions web</span>
 </div>
 <div class="cards">
 
-<a href="/dam-m6-uf1">
-        <div class="card java">
+<a href="/daw-m8-uf1">
+        <div class="card web">
             <div class="card-title">
-                <span>UF1 - Persistència en fitxers</span>
+                <span>UF1 - Servidors web i transferència de fitxers</span>
             </div>
             <div class="card-description">
 
@@ -132,10 +132,10 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
-    </a><a href="/dam-m6-uf2">
-        <div class="card java">
+    </a><a href="/daw-m8-uf2">
+        <div class="card web">
             <div class="card-title">
-                <span>UF2 - Persistència en BDR-OR-OO</span>
+                <span>UF2 - Servidors d’aplicacions web</span>
             </div>
             <div class="card-description">
 
@@ -145,10 +145,10 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
-    </a><a href="/dam-m6-uf3">
-        <div class="card java">
+    </a><a href="/daw-m8-uf3">
+        <div class="card web">
             <div class="card-title">
-                <span>UF3 - Persistència en BD Natives XML</span>
+                <span>UF3 - Desplegament d’aplicacions web</span>
             </div>
             <div class="card-description">
 
@@ -158,10 +158,10 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
-    </a><a href="/dam-m6-uf4">
-        <div class="card java">
+    </a><a href="/daw-m8-uf4">
+        <div class="card web">
             <div class="card-title">
-                <span>UF4 - Components d&#39;accés a dades</span>
+                <span>UF4 - Control de versions i documentació</span>
             </div>
             <div class="card-description">
 
