--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 :root {
     --dades-color: #dc503d;
     --dades-image: url('/dades.png');
+    --desplegament-color: #dcd93d;
+    --desplegament-image: url('/desplegament.png');
     --mobils-color: #3ddc84;
     --mobils-image: url('/mobils.jpg');
     --web-color: #4285f4;
@@ -64,6 +66,11 @@ a {
     border-color: var(--dades-color);
 }
 
+.card.desplegament{
+    background-color: var(--desplegament-color);
+    border-color: var(--desplegament-color);
+}
+
 .card.mobils{
     background-color: var(--mobils-color);
     border-color: var(--mobils-color);
@@ -110,6 +117,12 @@ a {
         <div class="card dades">
             <h1>DAM-M6-Accés a dades</h1>
             <img src="dades.png">
+        </div>
+    </a>
+    <a href="/daw-m8">
+        <div class="card desplegament">
+            <h1>DAW-M8-Desplegament d'aplicacions web</h1>
+            <img src="desplegament.png">
         </div>
     </a>
     <a href="/dam-m8">
