--- a/dam-m6-uf1/index.html
+++ b/dam-m6-uf1/index.html
@@ -80,6 +80,9 @@
 <section>
     <h2>Read/write</h2>
 
+    <h3>UTF-8</h3>
+
+    
     <h3>Orientat a bytes</h3>
     <h4>OutputStream / InputStream</h4>
     <sc java>
