--- a/dam-m6-uf1/index.html
+++ b/dam-m6-uf1/index.html
@@ -83,13 +83,13 @@
     <h3>Orientat a bytes</h3>
     <h4>OutputStream / InputStream</h4>
     <sc java>
-        // escriure
+        // escriure bytes a un fitxer
         OutputStream os = Files.newOutputStream(path);
         os.write(63);
         os.write(127);
         os.write(33);
 
-        // llegir un byte
+        // llegir un byte d'un fitxer
         InputStream is = Files.newInputStream(path);
         int a = is.read();
 
