--- a/daw-m8-virtmanager/index.html
+++ b/daw-m8-virtmanager/index.html
@@ -31,7 +31,7 @@
     <p>Seleccionem l'opció <mo>Importar imagen de disco existente</mo> i fem click en <mo>Adelante</mo>
 
     <p>Explorem la ruta de l'arxiu de disc dur virtual que hem descarregat abans. Fem click a 
-        <mo>Explorar...</mo> i després a <mo>Explorar localmente</mo>. Seleccioem l'arxiu <w>debian-11-nocloud-amd64.qcow2</w>
+        <mo>Explorar...</mo> i després a <mo>Explorar localmente</mo>. Seleccionem l'arxiu <w>debian-11-nocloud-amd64.qcow2</w>
     </p>
     <p>A l'opció <mo>Choose the operating system"</mo> escrvim <name>Debian 10</name>, i fem click en <mo>Adelante</mo></p>
 
